--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,11 @@
+body {
+  width: 500px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #callControl {
   display: flex;
   flex-direction: column;
@@ -9,8 +17,7 @@
   padding-left: 10px;
   font-size: 1em;
   font-family: "Open Sans", sans-serif;
-  width: 300px;
-  height: 40px;
+  width: 200px;
   border: 0px;
   border-bottom: 1px solid #b8b8b8;
 }
@@ -27,22 +34,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   color: #fff;
-  width: 260px;
-  height: 40px;
+  width: 100px;
+  height: 20px;
   font-size: 20px;
-  margin: 20px;
+  margin: 10px;
   border-radius: 20px;
   cursor: pointer;
 }
 
 #callStatus {
-  margin-top: 10px;
   font-size: 18px;
 }
 
 #login-form {
-  display: flex; 
+  display: flex;
   flex-direction: column;
 }
 
@@ -58,6 +65,9 @@
 }
 
 #login-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 10px 20px;
   background-color: #389400;
   outline: none;
